--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ roidata.mat
 /May 30 Pig Brain
 myCloseReq.m
 
+/Tracking and Analysis/FixBrokenPoints.m
+NcorrLocaltoGlobalfor1Pt.m
+/Tracking and Analysis/NoDisplacementTest.m
+/Tracking and Analysis/Thing.m
